hoan thanh task

--- a/app/src/main/res/drawable-v24/background_status.xml
+++ b/app/src/main/res/drawable-v24/background_status.xml
@@ -4,5 +4,5 @@
     <solid android:color="@color/white" />
     <stroke
         android:width="2dp"
-        android:color="@color/base_grey" />
+        android:color="@color/light_grey" />
 </shape>
