--- a/app/src/main/res/drawable/background_btncancel.xml
+++ b/app/src/main/res/drawable/background_btncancel.xml
@@ -2,8 +2,8 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
     <solid android:color="@color/white" />
-    <corners android:radius="8dp"/>
+    <corners android:radius="7dp"/>
     <stroke
         android:width="2dp"
-        android:color="@color/white" />
+        android:color="@color/electric_green" />
 </shape>
