--- a/app/src/main/res/drawable/background_button.xml
+++ b/app/src/main/res/drawable/background_button.xml
@@ -2,6 +2,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
     <solid android:color="@color/electric_green" />
+    <corners android:radius="7dp"/>
     <stroke
         android:width="2dp"
         android:color="@color/electric_green" />
