--- a/app/src/main/res/drawable/background_headerdialog.xml
+++ b/app/src/main/res/drawable/background_headerdialog.xml
@@ -2,7 +2,8 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
     <solid android:color="@color/electric_green" />
-    <corners android:radius="7dp"/>
+    <corners android:topLeftRadius="8dp" android:topRightRadius="8dp"
+        android:bottomLeftRadius="0.1dp" android:bottomRightRadius="0.1dp"/>
     <stroke
         android:width="2dp"
         android:color="@color/electric_green" />
