--- a/app/src/main/res/drawable/background_textlayoutselected.xml
+++ b/app/src/main/res/drawable/background_textlayoutselected.xml
@@ -2,7 +2,8 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
     <solid android:color="@color/white" />
+    <corners android:radius="7dp"/>
     <stroke
         android:width="2dp"
-        android:color="@color/dark_electric_green" />
+        android:color="@color/white" />
 </shape>
