--- a/app/src/main/res/drawable/background_headerdialog.xml
+++ b/app/src/main/res/drawable/background_headerdialog.xml
@@ -2,8 +2,11 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
     <solid android:color="@color/electric_green" />
-    <corners android:topLeftRadius="8dp" android:topRightRadius="8dp"
-        android:bottomLeftRadius="0.1dp" android:bottomRightRadius="0.1dp"/>
+    <corners
+        android:bottomLeftRadius="0.1dp"
+        android:bottomRightRadius="0.1dp"
+        android:topLeftRadius="8dp"
+        android:topRightRadius="8dp" />
     <stroke
         android:width="2dp"
         android:color="@color/electric_green" />
