update them progress bar

--- a/app/src/main/res/layout/fragment_account_activity.xml
+++ b/app/src/main/res/layout/fragment_account_activity.xml
@@ -119,16 +119,15 @@
                 android:text="TEST"
                 android:textColor="@color/white" />
 
-            <com.example.hoangcv2_task.CustomProgressBar
+            <com.example.hoangcv2_task.CustomWormProgressBar
                 android:id="@+id/dots_progress"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/linearLayoutDaySelect"
                 android:layout_alignParentEnd="true"
                 android:visibility="invisible"
-                app:color="@color/black"
                 app:count="3"
-                app:timeout="10" />
+                app:color="@color/black" />
 
             <TextView
                 android:layout_centerHorizontal="true"
