--- a/app/src/main/res/layout/fragment_account_activity.xml
+++ b/app/src/main/res/layout/fragment_account_activity.xml
@@ -3,11 +3,12 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
+    android:id="@+id/test"
     android:layout_height="match_parent"
     android:background="@color/white"
 
     android:fillViewport="true"
-    tools:context=".AccountActivityFragment">
+    tools:context=".view.AccountActivityFragment">
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -126,8 +127,8 @@
                 android:layout_below="@+id/linearLayoutDaySelect"
                 android:layout_alignParentEnd="true"
                 android:visibility="invisible"
-                app:count="3"
-                app:color="@color/black" />
+                app:color="@color/black"
+                app:count="3" />
 
             <TextView
                 android:layout_centerHorizontal="true"
